force-app/main/default/objects/Building__c/Building__c.object-meta.xml
<CustomObject>
    <label>Building</label>
    <nameField>
        <label>Buildings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>