force-app/main/default/objects/Building__c/fields/Building_type__c.field-meta.xml
<CustomField>
    <fullName>Building_type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shelter</fullName>
            </value>
            <value>
                <fullName>Pop-Up Shelter</fullName>
            </value>
            <value>
                <fullName>Hostel</fullName>
            </value>
            <value>
                <fullName>Encampment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>