force-app/main/default/objects/Building__c/fields/FacilityLocation__c.field-meta.xml
<CustomField>
    <fullName>FacilityLocation__c</fullName>
    <label>Building Coordinates</label>
    <required>true</required>
    <scale>0</scale>
    <type>Location</type>
</CustomField>