force-app/main/default/objects/Building__c/fields/Occupancy_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Percentage__c</fullName>
    <formula>IF(ISBLANK(Total_Beds__c), null,
    IF(Total_Beds__c &lt;= 0, 0,
        (1 - (Vacant_Beds__c / Total_Beds__c))
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupancy Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>