force-app/main/default/objects/Building__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select the account with service provider record type.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Buildings</relationshipLabel>
    <relationshipName>Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>