force-app/main/default/objects/Building__c/fields/Total_Beds__c.field-meta.xml
<CustomField>
    <fullName>Total_Beds__c</fullName>
    <label>Total Beds</label>
    <summaryForeignKey>Unit__c.Building__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>