force-app/main/default/objects/Building__c/fields/Vacant_Beds__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Beds__c</fullName>
    <label>Vacant Beds</label>
    <summaryFilterItems>
        <field>Unit__c.Status__c</field>
        <operation>equals</operation>
        <value>Vacant</value>
    </summaryFilterItems>
    <summaryForeignKey>Unit__c.Building__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>