force-app/main/default/objects/Building__c/recordTypes/Homelessness.recordType-meta.xml
<RecordType>
    <fullName>Homelessness</fullName>
    <active>true</active>
    <label>Homelessness</label>
</RecordType>